# jif

./: .gitignore  difftest.ipynb  mdlm_test.ipynb  pyproject.toml  sedd_test.ipynb
src/jif/: __main__.py  data.py  diffusion.py  model.py  modula.py
