[project]
name = "jif"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nev", email = "sshabalin3@gatech.edu"},
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "torch>=2.3.1",
    "penzai>=0.1.4",
    "fire>=0.6.0",
    "datasets>=2.20.0",
]


[tool.pdm]
distribution = false

[[tool.pdm.source]]
name = "libtpu"
url = "https://storage.googleapis.com/jax-releases/libtpu_releases.html"

[[tool.pdm.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
